add wald ci sim

--- a/index.qmd
+++ b/index.qmd
@@ -13,3 +13,4 @@ format:
 This repository contains short simulations and demonstrations of statistical phenomena prompted by comments I encounter in papers, books, etc. The goal is to build a small archive of intuition prompts that help with applied statistical decision-making.
 
 - [Consequences of omitting (warranted) random slopes; based on Barr et al., 2013](https://jacob-gg.github.io/sims/barr-et-al-2013-random-slopes-keep-it-maximal)
+- [Poor performance of Wald CIs for proportions; based on Andersson, 2023](https://jacob-gg.github.io/sims/andersson-2023-wald-interval-poor-performance)
